--- a/app/00_src/templates/index.pug
+++ b/app/00_src/templates/index.pug
@@ -11,10 +11,8 @@ html(lang="fr")
             h1 Liste des templates
             div.panel
                 ul.list.list--templates
-                    li.list__item(data-state="todo" data-type="md")
-                        a(href="T01-styleguide.html") T01 - Styleguide
-                    li.list__item(data-state="todo" data-type="d")
-                        a(href="T02-homepage.html") T02 - Homepage
+                    li.list__item(data-state="doing" data-type="d")
+                        a(href="T02-homepage.html") T01 - Homepage
 
 
     include partials/_scripts
