Add banner html

--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -8,3 +8,12 @@ block extraScripts
 block extraMarkup
 
 block content
+    section.section.banner
+        div.container
+            div.banner
+                p.heading-1 Bienvenue
+                p.heading-2 Explorateur digital,
+                p.teasing-1 Vous voilà de passage à Luditales
+            div.choices
+                button.btn Découvrir l'entreprise
+                button.btn Découvrir le projet
