Add banner background

--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -10,10 +10,10 @@ block extraMarkup
 block content
     section.section.banner
         div.container
-            div.banner
+            div.banner__header
                 p.heading-1 Bienvenue
-                p.heading-2 Explorateur digital,
-                p.teasing-1 Vous voilà de passage à Luditales
-            div.choices
+                p.teasing-1 Explorateur digital,
+                p.teasing-2 Vous voilà de passage à Luditales
+            div.banner__footer.choices
                 button.btn Découvrir l'entreprise
                 button.btn Découvrir le projet
