--- a/app/00_src/css/00_utilities/_variables.styl
+++ b/app/00_src/css/00_utilities/_variables.styl
@@ -19,8 +19,8 @@ $c-link         = $c-primary
 
 $family-sans-serif = BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $family-monospace  = monospace
-$font-primary      = 'Poppins', $family-sans-serif
-$font-secondary    = 'Playfair Display', serif
+$font-primary      = 'Open Sans', $family-sans-serif
+$font-secondary    = 'Oswald', serif
 
 $size-super-tiny   = 1.2rem
 $size-smaller      = 1.4rem
