Add colors to variables

--- a/app/00_src/css/00_utilities/_variables.styl
+++ b/app/00_src/css/00_utilities/_variables.styl
@@ -5,13 +5,14 @@ $c-grey-dark    = #302533
 $c-grey         = #d3f7de
 $c-white        = #ffffff
 
-$c-turquoise    = #a9e5bb
+$c-purple       = #7C4F9F
+$c-blue         = #0099cc
 
 // General colors
 
 $c-background   = $c-white
-$c-primary      = $c-turquoise
-$c-secondary    = $c-grey-dark
+$c-primary      = $c-purple
+$c-secondary    = $c-blue
 $c-font         = $c-black
 $c-link         = $c-primary
 
@@ -35,7 +36,7 @@ $size-super-larger = 11rem
 $weight-light    = 300
 $weight-regular  = 400
 $weight-medium   = 500
-$weight-semibold = 700
+$weight-semibold = 800
 $weight-bold     = 900
 
 // Grid breakpoints
