Add dark section modifier

--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -8,7 +8,7 @@ block extraScripts
 block extraMarkup
 
 block content
-    section.section.banner
+    section.banner.section.section--dark
         div.container
             div.banner__header
                 p.heading-1 Bienvenue
