Add first typography items

--- a/app/00_src/css/01_base/_typography.styl
+++ b/app/00_src/css/01_base/_typography.styl
@@ -1,6 +1,8 @@
 .heading-1
-    font-secondary()
-    black()
+    font-primary()
+    upper()
+    bold()
+    color $c-primary
     font-size $size-super-larger
 
 .heading-2
@@ -16,18 +18,19 @@
 
 .teasing-1
     font-primary()
+    upper()
     light()
-    font-size $size-large
+    font-size $size-larger
 
 .teasing-2
     font-primary()
-    regular()
-    upper()
-    font-size $size-smaller
+    light()
+    italic()
+    font-size $size-large
 
 .text
     font-primary()
-    regular()
+    light()
     font-size $size-regular
     line-height 1.8
 
@@ -36,10 +39,9 @@
 
 .btn
     font-secondary()
-    black()
-    italic()
+    upper()
     font-size $size-medium
-    letter-spacing 5px
+    letter-spacing 1px
 
 .logo
     font-secondary()
