--- a/app/00_src/css/02_atoms/_buttons.styl
+++ b/app/00_src/css/02_atoms/_buttons.styl
@@ -1,19 +1,6 @@
 .btn
     display inline-block
-    padding 0 0.5rem
-    background repeating-linear-gradient(
-        180deg,
-        transparent,
-        transparent 2.3rem,
-        $c-primary 2.3rem,
-        $c-primary 3.45rem
-    )
-
-    &:hover
-        background repeating-linear-gradient(
-            180deg,
-            transparent,
-            transparent 0rem,
-            $c-primary 0rem,
-            $c-primary 100%
-        )
+    padding 1.2rem 4.5rem
+    background transparent
+    border $c-font solid 2px
+    color $c-font
