Add typography banner styles

--- a/app/00_src/css/01_base/_typography.styl
+++ b/app/00_src/css/01_base/_typography.styl
@@ -40,8 +40,12 @@
 .btn
     font-secondary()
     upper()
-    font-size $size-medium
+    font-size $size-regular - 0.1rem
     letter-spacing 1px
+
+    +tablet()
+        font-size $size-medium
+
 
 .logo
     font-secondary()
