--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -9,11 +9,11 @@ block extraMarkup
 
 block content
     section.banner.section.section--dark
-        div.container
+        div.container.banner__inner
             div.banner__header
-                p.heading-1 Bienvenue
-                p.teasing-1 Explorateur digital,
-                p.teasing-2 Vous voilà de passage à Luditales
+                p.banner__title.heading-1 Bienvenue
+                p.banner__subtitle.teasing-1 Explorateur digital,
+                p.banner__teasing.teasing-2 Vous voilà de passage à Luditales.
             div.banner__footer.choices
                 button.btn Découvrir l'entreprise
                 button.btn Découvrir le projet
