--- a/app/00_src/css/02_atoms/_buttons.styl
+++ b/app/00_src/css/02_atoms/_buttons.styl
@@ -1,6 +1,11 @@
 .btn
-    display inline-block
+    display block
+    width 100%
+    margin 2rem 0
     padding 1.2rem 4.5rem
     background transparent
     border $c-font solid 2px
     color $c-font
+
+    +tablet()
+        display inline-block
