--- a/app/00_src/css/03_components/_banner.styl
+++ b/app/00_src/css/03_components/_banner.styl
@@ -1,4 +1,22 @@
 .banner
+    display flex
+    align-items center
     min-height 100vh
     background url(/assets/images/illus/fond-header.jpg) no-repeat center center
     background-size cover
+    text-align center
+
+    &__title
+        font-size 13.5vw
+
+    &__subtitle
+        font-size 7vw
+
+    &__teasing
+        font-size 4.9vw
+
+    &__header
+        margin 15rem 0 0
+
+    &__footer
+        margin 8rem 0 0
