--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -9,6 +9,7 @@ block extraMarkup
 
 block content
     section.banner.section.section--dark
+        div.banner__bg
         div.container.banner__inner
             div.banner__header
                 p.banner__title.heading-1 Bienvenue
