Add header html

--- a/app/00_src/templates/components/_header.pug
+++ b/app/00_src/templates/components/_header.pug
@@ -1,1 +1,17 @@
 header.header
+    div.header__inner.container
+        div.header__left
+            a.logo(href="#")
+        div.header__right.menu
+            button.menu__toggler.js-menu-toggler
+                i.bar
+                i.bar
+                i.bar
+            nav.menu_items
+                ul
+                    li.menu-item #[a(href="#accueil") Accueil]
+                    li.menu-item #[a(href="#projet") Notre projet]
+                    li.menu-item #[a(href="#histoire") Notre histoire]
+                    li.menu-item #[a(href="#philosophie") Notre philosophie]
+                    li.menu-item #[a(href="#equipe") Notre équipe]
+                    li.menu-item #[a(href="#contact") Contact]
