Add header styles

--- a/app/00_src/templates/components/_header.pug
+++ b/app/00_src/templates/components/_header.pug
@@ -2,12 +2,12 @@ header.header
     div.header__inner.container
         div.header__left
             a.logo(href="#")
-        div.header__right.menu
+        div.header__right.menu.js-menu
             button.menu__toggler.js-menu-toggler
-                i.bar
-                i.bar
-                i.bar
-            nav.menu_items
+                div.bar
+                div.bar
+                div.bar
+            nav.menu__items
                 ul
                     li.menu-item #[a(href="#accueil") Accueil]
                     li.menu-item #[a(href="#projet") Notre projet]
