--- a/app/00_src/css/01_base/_typography.styl
+++ b/app/00_src/css/01_base/_typography.styl
@@ -53,8 +53,15 @@
     font-size $size-medium
 
 .menu
-    .is-active
-        bold()
+    font-secondary()
+    upper()
+    font-size $size-regular - 0.1rem
+    letter-spacing 1px
+    line-height 2
+    text-shadow 1px 1px 2px #000
+
+    +tablet()
+        font-size $size-medium
 
 .copyright
     font-primary()
