Add first section html

--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -8,7 +8,7 @@ block extraScripts
 block extraMarkup
 
 block content
-    section.banner.section.section--dark
+    section.banner.section
         div.banner__bg
         div.container.banner__inner
             div.banner__header
@@ -18,3 +18,12 @@ block content
             div.banner__footer.choices
                 button.btn Découvrir l'entreprise
                 button.btn Découvrir le projet
+
+    section.section.section--project
+        div.section__icon
+        div.container.section__inner
+            h2.section__title.heading-2 Notre projet
+            div.section__content.rte
+                img(src="/assets/images/illus/illu800.jpg" alt="Illustration de luditales par laurianne terrier")
+                p A mi-chemin entre les jeux de rôle en ligne et les histoires interactives, LudiTales a pour ambition de vous permettre de vous plonger dans les univers dont vous rêvez, rapidement et simplement. Tous vos choix auront une conséquence sur la suite de votre histoire.
+                p Notre application web vous permettra de créer vous même des histoires passionnantes que vous pourrez partager et jouer seul ou à plusieurs. Venez développer votre créativité et dévoiler vos aventures uniques à vos amis.
