--- a/app/00_src/css/02_atoms/_buttons.styl
+++ b/app/00_src/css/02_atoms/_buttons.styl
@@ -2,10 +2,11 @@
     display block
     width 100%
     margin 2rem 0
-    padding 1.2rem 4.5rem
+    padding 1.2rem 0
     background transparent
     border $c-font solid 2px
     color $c-font
 
     +tablet()
         display inline-block
+        padding 1.2rem 4.5rem
