--- a/app/00_src/css/03_components/_menu.styl
+++ b/app/00_src/css/03_components/_menu.styl
@@ -17,8 +17,11 @@
             border-radius 25px
             transition transform 200ms ease-in-out
 
-
     &__items
+        pointer-events none
+        height 0
+        transition height 0s ease-in-out 500ms
+
         .menu-item
             position relative
             right -100vw
@@ -61,6 +64,10 @@
                     transform rotate(-42.5deg) scaleX(1.28)
 
         .menu__items
+            pointer-events auto
+            height auto
+            transition height 0s ease-in-out
+
             .menu-item
                 right 0
                 transition right 500ms ease-in-out
