Add the team template and style

--- a/app/00_src/css/00_utilities/_variables.styl
+++ b/app/00_src/css/00_utilities/_variables.styl
@@ -3,7 +3,7 @@
 $c-black        = #251a28
 $c-grey-dark    = #302533
 $c-grey         = #d3f7de
-$c-white        = #ffffff
+$c-white        = #f1f1f1
 
 $c-purple       = #7C4F9F
 $c-blue         = #0099cc
@@ -24,11 +24,11 @@ $font-primary      = 'Open Sans', $family-sans-serif
 $font-secondary    = 'Oswald', serif
 
 $size-super-tiny   = 1.2rem
-$size-smaller      = 1.4rem
-$size-small        = 1.5rem
-$size-regular      = 1.6rem
-$size-medium       = 2rem
-$size-large        = 3.6rem
+$size-smaller      = 1.5rem
+$size-small        = 1.6rem
+$size-regular      = 2rem
+$size-medium       = 2.5rem
+$size-large        = 3.1rem
 $size-larger       = 6.6rem
 $size-super-large  = 7.7rem
 $size-super-larger = 11rem
