--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -45,5 +45,68 @@ block content
             div.section__footer.choices
                 button.btn Découvrir notre histoire
                 button.btn Découvrir nos membres
-
     // / story section
+
+
+    // philosophy section
+    section.section.section--philosophy.section-open
+        div.section__icon
+        div.container.section__inner
+            h2.section__title.heading-2 Notre philosophie
+            div.section__content.row
+                div.column.section__column
+                    img(src="/assets/images/icons/icone-divertir.png" alt="divertir").section__thumbnail
+                    h3.heading-3 Divertir
+                    p.text Incarnez un chasseur de mage, un valeureux guerrier, une créature de l'ombre, un zombie ou encore une voyante ! Différents personnages sont disponibles en fonction des histoires… Il vous est aussi possible de créer votre propre scénario et votre propre héros !
+                div.column.section__column
+                    img(src="/assets/images/icons/icone-simplifier.png" alt="simplifier").section__thumbnail
+                    h3.heading-3 Simplifier
+                    p.text Vous n'avez pas le courage d'engager une quête contre le dragon de votre région ? D'un coup de baguette magique nous simplifions vos histoires ! Plus besoin de se soucier de lancer les dès ou de calculer des points de compétences. Nous le faisons pour vous !
+                div.column.section__column
+                    img(src="/assets/images/icons/icone-partager.png" alt="partager").section__thumbnail
+                    h3.heading-3 Partager
+                    p.text Vous souhaitez vivre une aventure incroyable avec vos amis ? Les histoires sont accessibles sur le site et jouables à plusieurs joueurs en même temps si vous le souhaitez ! Programmez des parties pour vous retrouver et rire ensemble.
+            div.section__footer.choices
+                button.btn Découvrir nos membres
+    // / philosophy section
+
+
+    // philosophy section
+    section.section.section--team.team.section-open
+        div.section__icon
+        div.container.section__inner
+            h2.section__title.heading-2 Notre équipe
+            div.row.is-multiline.is-mobile
+                div.column.is-6-mobile.is-4-tablet.team__member
+                    div.team__member__thumbnail
+                    div.team__member__infos
+                        p.name laurianne
+                        p.surname Terrier
+                div.column.is-6-mobile.is-4-tablet.team__member
+                    div.team__member__thumbnail
+                    div.team__member__infos
+                        p.name laurianne
+                        p.surname Terrier
+                div.column.is-6-mobile.is-4-tablet.team__member
+                    div.team__member__thumbnail
+                    div.team__member__infos
+                        p.name laurianne
+                        p.surname Terrier
+                div.column.is-6-mobile.is-4-tablet.team__member
+                    div.team__member__thumbnail
+                    div.team__member__infos
+                        p.name laurianne
+                        p.surname Terrier
+                div.column.is-6-mobile.is-4-tablet.team__member
+                    div.team__member__thumbnail
+                    div.team__member__infos
+                        p.name laurianne
+                        p.surname Terrier
+                div.column.is-6-mobile.is-4-tablet.team__member
+                    div.team__member__thumbnail
+                    div.team__member__infos
+                        p.name laurianne
+                        p.surname Terrier
+            div.section__footer.choices
+                button.btn Et pour finir...
+    // / philosophy section
