Add team card html tags

--- a/app/00_src/css/03_components/_team.styl
+++ b/app/00_src/css/03_components/_team.styl
@@ -4,7 +4,7 @@
 
         &__thumbnail
             position relative
-            padding-top 125%
+            padding-top 115%
             background url(/assets/images/avatars/photo-laurianne.png) no-repeat center center
             background-size contain
 
@@ -34,3 +34,6 @@
 
             .team__member__thumbnail:after, .team__member__infos
                 opacity 1
+
+    &__cardlist
+        //color $c-white
