--- a/app/00_src/css/00_utilities/_variables.styl
+++ b/app/00_src/css/00_utilities/_variables.styl
@@ -5,8 +5,8 @@ $c-grey-dark    = #302533
 $c-grey         = #d3f7de
 $c-white        = #f1f1f1
 
-$c-purple       = #7C4F9F
-$c-blue         = #0099cc
+$c-purple       = #B6019E
+$c-blue         = #0e9fa2
 
 // General colors
 
