--- a/app/00_src/css/04_layout/_section.styl
+++ b/app/00_src/css/04_layout/_section.styl
@@ -57,7 +57,7 @@
     &:nth-of-type(2n +1)
         color $c-white
 
-        .btn, .rte, .heading-2, .heading-2:after, .heading-3, .text
+        .btn, .rte, .heading-2, .heading-2:after, .heading-3, .text, .team__card
             color $c-white
             border-color $c-white
 
