Add style to member card

--- a/app/00_src/css/01_base/_typography.styl
+++ b/app/00_src/css/01_base/_typography.styl
@@ -73,6 +73,32 @@
     .surname
         upper()
 
+.card
+    &__heading
+        font-secondary()
+        upper()
+        line-height 1.2
+        font-size $size-large
+
+    &__heading-2
+        font-secondary()
+        upper()
+        bold()
+        line-height 1.2
+        font-size $size-regular - 0.5rem
+
+    &__heading-3
+        font-secondary()
+        upper()
+        line-height 1.2
+        font-size $size-regular
+
+    &__teasing
+        upper()
+        light()
+        line-height 1.2
+        font-size $size-smaller
+
 .copyright
     font-primary()
     regular()
