--- a/app/00_src/css/04_layout/_section.styl
+++ b/app/00_src/css/04_layout/_section.styl
@@ -12,6 +12,7 @@
 
     &__icon
         position absolute
+        z-index 10
         left 50%
         top 0
         width 15rem
@@ -57,7 +58,7 @@
     &:nth-of-type(2n +1)
         color $c-white
 
-        .btn, .rte, .heading-2, .heading-2:after, .heading-3, .text, .team__card
+        .btn, .rte, .heading-2, .heading-2:after, .heading-3, .text, .card
             color $c-white
             border-color $c-white
 
