--- a/app/00_src/css/03_components/_team.styl
+++ b/app/00_src/css/03_components/_team.styl
@@ -36,4 +36,101 @@
                 opacity 1
 
     &__cardlist
-        //color $c-white
+        background-size cover
+        text-align center
+
+        .card
+            max-height 0
+            overflow hidden
+            transition max-height 200ms ease
+
+            &--open
+                max-height 200rem
+                transition max-height 200ms ease
+
+            &__heading-2
+                display block
+                width 80%
+                position relative
+                margin 4rem 0 2rem 10%
+                padding 1rem 0
+                background $c-white
+                color $c-font
+
+                &:before
+                    position absolute
+                    content ''
+                    display block
+                    top 0
+                    left -1.5rem
+                    width 0
+                    border-right: 1.5rem solid $c-white;
+                    border-top: 1.9rem solid transparent;
+                    border-bottom: 1.9rem solid transparent;
+
+                &:after
+                    position absolute
+                    content ''
+                    display block
+                    top 0
+                    right -1.5rem
+                    width 0
+                    border-left: 1.5rem solid $c-white;
+                    border-top: 1.9rem solid transparent;
+                    border-bottom: 1.9rem solid transparent;
+                    
+            &__thumbnail
+                max-width 17rem
+
+            &__gauge
+                position relative
+                height 1.8rem
+                margin-top 1.8rem
+                border $c-white solid 2px
+
+                &__inner
+                    position absolute
+                    top 0
+                    left 0
+                    height 100%
+                    background $c-white
+            &__header
+                &__left
+                    margin 0 0 2rem
+            &__footer
+                margin-bottom 6rem
+                .card__heading-3
+                    text-align left
+
+            &__button
+                padding 2rem
+                background transparent
+                border none
+
+                .bar
+                    width 2.2rem
+                    height 0.4rem
+                    margin 0.5rem
+                    background $c-white
+                    border-radius 25px
+
+                    &:nth-of-type(1)
+                        transform-origin top left
+                        transform rotate(42.5deg) scaleX(1.28)
+
+                    &:nth-of-type(2)
+                        transform-origin center center
+                        transform scaleX(0)
+
+                    &:nth-of-type(3)
+                        transform-origin bottom left
+                        transform rotate(-42.5deg) scaleX(1.28)
+        .skill__box
+            display inline-block
+            height 1.8rem
+            width 1.8rem
+            margin-right 0.1rem
+            border $c-white solid 2px
+
+            &--checked
+                background $c-white
